api/crates/postgres/tests/integration/tag_types/snapshots/integration__tag_types__create____test_context_wrapped_succeeds.snap
---
source: crates/postgres/tests/integration/tag_types/create.rs
expression: ctx.queries()
---
[[queries]]
sql = '''
INSERT INTO
  "tag_types" ("slug", "name", "kana")
VALUES
  ($1, $2, $3)
RETURNING
  "id",
  "slug",
  "name",
  "kana"'''
rows_affected = 1
rows_returned = 1
